--- a/app/css/style.css
+++ b/app/css/style.css
@@ -123,13 +123,16 @@ input[type=search]::-webkit-search-results-decoration {
 }
 
 input:focus,
-select:focus,
-.file-button:focus,
 input:active,
-select:active,
-.file-button:active,
 input:hover,
+select:focus,
+select:active,
 select:hover,
+textarea:focus,
+textarea:active,
+textarea:hover,
+.file-button:focus,
+.file-button:active,
 .file-button:hover {
     outline: none !important;
     border: 1px solid #DCDCDC !important;
@@ -144,7 +147,8 @@ input[type=range] {
 }
 
 input,
-select {
+select,
+textarea {
     background-color: var(--menu-background-color) !important;
     color: var(--menu-icon-color) !important;
     border-radius: 6px;
