--- a/app/css/style.css
+++ b/app/css/style.css
@@ -169,10 +169,11 @@ select,
 textarea {
     background-color: var(--menu-background-color) !important;
     color: var(--menu-icon-color) !important;
-    border-radius: 6px;
+    border-radius: 6px !important;
     border: 1px solid #4a4a4a;
     cursor: auto;
     outline: none !important;
+    height: 2.5em;
 }
 
 input[type=checkbox] {
@@ -185,12 +186,17 @@ select {
 }
 
 input[type=search] {
-    height: 3em;
+    height: 3em !important;
     width: 180px;
+}
+
+input[type=range] {
+    height: 4px !important;
 }
 
 input[type=color] {
     cursor: pointer;
+    width: 53px;
 }
 
 input[type=number] {
