--- a/app/css/style.css
+++ b/app/css/style.css
@@ -31,7 +31,7 @@ pre {
 }
 
 a {
-    color: darkgrey;
+    color: var(--theme);
 }
 
 ion-icon {
@@ -52,7 +52,13 @@ ion-icon {
 
 /* Banners */
 
+#banners {
+    flex: 0 1 auto;
+    z-index: 80;
+}
+
 .banner {
+    width: 100vw;
     height: 25px;
     text-align: center;
     position: relative;
@@ -179,6 +185,7 @@ textarea {
 input[type=checkbox] {
     margin-left: 8px;
     transform: translateY(1px);
+    height: 1em !important;
 }
 
 select {
@@ -290,12 +297,19 @@ input[type=number] {
 #content {
     position: absolute;
     width: 100%;
-    height: 100%;
+    bottom: 0;
     overflow-y: hidden;
     overflow-x: hidden;
     opacity: 0;
     top: var(--title-bar-height);
     left: 0;
+    display: flex;
+    flex-flow: column;
+}
+
+.main-content {
+    flex: 1 1 auto;
+    height: 100%;
 }
 
 /* Title bar */
@@ -512,8 +526,8 @@ input[type=number] {
 /* Pages */
 
 .pages {
-    padding-left: 220px;
-    height: calc(100% - var(--title-bar-height));
+    padding-left: calc(var(--menu-width) + 10px);
+    height: 100%;
     overflow-y: auto;
     overflow-x: hidden;
 }
@@ -525,6 +539,7 @@ input[type=number] {
 .page {
     overflow-x: hidden;
     margin-bottom: 0 !important;
+    height: 100%;
 }
 
 .widget-settings-page {
@@ -533,7 +548,7 @@ input[type=number] {
 
 .moduleframe {
     display: block;
-    height: calc(100vh - var(--title-bar-height));
+    height: 100%;
     width: 100%;
 }
 
