--- a/app/css/style.css
+++ b/app/css/style.css
@@ -245,9 +245,9 @@ input[type=number] {
 }
 
 .dynamic-add {
-    position: absolute;
-    top: -35px;
-    right: 4px;
+    display: inline-block;
+    padding-left: 10px;
+    transform: translateY(3px);
     z-index: 99;
 }
 
