Fix weirdness with the dropdown arrow floating weirdly.

--- a/app/css/style.css
+++ b/app/css/style.css
@@ -685,5 +685,5 @@ nav ul li .dropdown-icon a:hover ion-icon {
 .sub-menu-arrow {
     position: absolute;
     left: calc(var(--menu-width) - 45px);
-    top: 5px;
+    transform: translateY(3px);
 }
