--- a/app/css/style.css
+++ b/app/css/style.css
@@ -451,18 +451,20 @@ input[type=number] {
     width: 40px;
     height: 40px;
     position: absolute;
-    top: 7px;
+    top: 50%;
+    transform: translateY(-50%);
     left: 5px;
 }
 
 .user-username {
     position: absolute;
-    max-width: calc(var(--menu-width) - 65px);
+    max-width: calc(var(--menu-width) - 60px);
     white-space: nowrap;
     overflow: hidden !important;
     text-overflow: ellipsis;
     left: 55px;
-    top: 10px;
+    top: 50%;
+    transform: translateY(-50%);
     box-sizing: border-box;
     display: inline-block;
     background-color: #DCDCDC;
@@ -471,7 +473,10 @@ input[type=number] {
     text-align: center;
     font-size: 12px;
     font-weight: bold;
-    padding: .01rem .45rem .2rem;
+    padding-right: 0.45rem;
+    padding-bottom: 0.2rem;
+    padding-left: 0.45rem;
+    margin-top: 1px;
     line-height: inherit;
 }
 
@@ -508,9 +513,9 @@ input[type=number] {
 .user-platform {
     position: absolute;
     width: auto;
-    height: 15px;
-    left: 5px;
-    bottom: 5px;
+    height: 18px;
+    left: 3px;
+    bottom: 3px;
 }
 
 .menu-label {
