Prevent the user from highlighting text in the side menu

--- a/app/css/style.css
+++ b/app/css/style.css
@@ -646,6 +646,7 @@ nav ul li .menu-button {
     padding: 10px 15px;
     border-bottom: 1px solid #383838;
     transition: 0.2s linear;
+    user-select: none;
 }
 
 nav ul li .menu-button:hover {
@@ -688,6 +689,7 @@ nav ul li .dropdown-item {
     list-style: none;
     margin: 0;
     padding: 0;
+    user-select: none;
 }
 
 #manage-widgets-button {
