--- a/app/css/style.css
+++ b/app/css/style.css
@@ -537,6 +537,10 @@ input[type=number] {
     border-top: 1px solid #646464;
 }
 
+#user-bar * {
+    user-select: none;
+}
+
 .user-icon {
     border-radius: 50%;
     object-fit: cover;
